--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,23 @@
 @import url(superslides.css);
 @import url(baguetteBox.min.css);
 
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#fd8000;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.my-float{
+	margin-top:22px;
+}
 /*------------------------------------------------------------------
     SKELETON
 -------------------------------------------------------------------*/
