--- a/css/registerstyle.css
+++ b/css/registerstyle.css
@@ -275,8 +275,7 @@ body {
 
 .container {
     margin-left: 17%;
-    margin: auto;
-    width: 70%;
+    display: inline-block;
     background: #fff;
     box-shadow: 0px 3px 9.5px 0.5px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 3px 9.5px 0.5px rgba(0, 0, 0, 0.15);
