--- a/css/style.css
+++ b/css/style.css
@@ -13,24 +13,26 @@
 @import url(font-awesome.min.css);
 @import url(superslides.css);
 @import url(baguetteBox.min.css);
-
-
-.float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#fd8000;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
+.float {
+    position: fixed;
+    width: 60px;
+    margin-bottom: 2rem;
+    height: 60px;
+    bottom: 40px;
+    right: 40px;
+    background-color: #fd8000;
+    color: #FFF;
+    border-radius: 50px;
+    text-align: center;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 1000 !important;
 }
 
-.my-float{
-	margin-top:22px;
+.my-float {
+    margin-top: 22px;
 }
+
+
 /*------------------------------------------------------------------
     SKELETON
 -------------------------------------------------------------------*/
